2000-12-10  Fred Fish  <fnf@be.com>

      * bfdlink.h (struct bfd_link_info): Add new allow_shlib_undefined
      member to struct for systems where it is normal to have undefined
      symbols in shared libraries at runtime and the runtime linker takes
      care of redirecting them.

2000-12-07  Zack Weinberg  <zack@wolery.stanford.edu>

	* safe-ctype.h: New file.

2000-12-06  Rodney Brown  <RodneyBrown@mynd.com>

	* getopt.h obstack.h: Standarize copyright statement.
	
2000-12-05  Richard Henderson  <rth@redhat.com>

	* demangle.h: Change "new_abi" to "v3" everywhere.

2000-11-29  Zack Weinberg  <zack@wolery.stanford.edu>

	* libiberty.h: Move #includes to top.  Prototype xmalloc_failed.
	
2000-11-15  Kenneth Block  <kenneth.block@compaq.com>

	* demangle.h: Add gnat and java demangle styles.

2000-11-04  Hans-Peter Nilsson  <hp@bitrange.com>

	* hashtab.h (struct htab): Add member return_allocation_failure.
	(htab_try_create): New prototype.  Mention which functions may
	return NULL when this is used.

2000-11-03  Hans-Peter Nilsson  <hp@bitrange.com>

	* hashtab.h: Change void * to PTR where necessary.

2000-10-11  Mark Mitchell  <mark@codesourcery.com>

	* splay-tree.h (splay_tree_predecessor): Declare.

2000-09-29  Hans-Peter Nilsson  <hp@axis.com>

	* dis-asm.h: Declare cris_get_disassembler, not print_insn_cris.
	Fix typo in comment.

2000-09-28  John David Anglin <dave@hiauly1.hia.nrc.ca>

	* alloca-conf.h: New file (copied from libiberty).

2000-09-05  John David Anglin <dave@hiauly1.hia.nrc.ca>

	* md5.h (md5_uint32): Choose via INT_MAX instead of UINT_MAX.

2000-09-04  Alex Samuel  <samuel@codesourcery.com>

	* dyn-string.h: Adjust formatting. 
	(dyn_string_insert_char): New macro.  New declaration.

2000-08-28  Jason Merrill  <jason@redhat.com>

	* md5.h: New file.

2000-08-24  Greg McGary  <greg@mcgary.org>

	* libiberty.h (ARRAY_SIZE): New macro.

2000-08-08  Jason Eckhardt  <jle@cygnus.com>

	* opcode/i860.h: Small formatting adjustments.
